Bug fix and add return
1. 清空购物车bug修复
2. 提交订单后的页面添加返回按钮

--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
 		"minified": true,
 		"newFeature": true
 	},
-	"appid": "wx1ca2144c66cd8ab4",
+	"appid": "wx487d6f2e4cbbcd8b",
 	"projectname": "supermarkets",
 	"libVersion": "2.2.5",
 	"condition": {
