Remove tab, add tabBar, add page me
1. 删除了超市页面的商家评论tabs
2. 添加了底部页面tab栏
3. 添加了“我”的页面

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,14 +1,27 @@
 {
-  "pages":[
+  "pages": [
     "pages/supermarket/goods/goods",
     "pages/supermarket/goods/pay/pay",
     "pages/supermarket/index/index",
-    "pages/supermarket/logs/logs"
+    "pages/supermarket/logs/logs",
+    "pages/supermarket/me/me"
   ],
   "window": {
     "backgroundColor": "#f2f2f2",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#787878",
     "navigationBarTextStyle": "white"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/supermarket/goods/goods",
+        "text": "超市"
+      },
+      {
+        "pagePath": "pages/supermarket/me/me",
+        "text": "我"
+      }
+    ]
   }
 }
