Bug fix and tabBar edit
1. 底下tabBar高亮显示

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -30,6 +30,10 @@
         "iconPath": "pages/supermarket/image/me1.png",
         "selectedIconPath": "pages/supermarket/image/me2.png"
       }
-    ]
+    ],
+
+    "color": "#696969",
+    "selectedColor": "#000000",
+    "borderStyle": "white"
   }
 }
