Bug fix, add authorize, server connect
1. 新增authorize页面，以获得用户授权
2. 启动时与服务器连接登录获得用户唯一标识
3. 启动时将用户信息保存到服务器中
4. 添加小程序config.js配置文件，提供request接口
5. goods页面检查用户授权状态，若未授权就跳转到授权页面
6. 修复若干bugs
6. 删除无用文件README.md和空txt文本文件

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,7 +7,8 @@
     "pages/supermarket/me/help",
     "pages/supermarket/address/address",
     "pages/supermarket/address/create",
-    "pages/supermarket/order/order"
+    "pages/supermarket/order/order",
+    "pages/supermarket/authorize/authorize"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
