--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,7 +9,8 @@
     "pages/supermarket/address/address",
     "pages/supermarket/address/create",
     "pages/supermarket/order/order",
-    "pages/supermarket/authorize/authorize"
+    "pages/supermarket/authorize/authorize",
+    "pages/supermarket/address/detail"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
