--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -10,7 +10,8 @@
     "pages/supermarket/address/create",
     "pages/supermarket/order/order",
     "pages/supermarket/authorize/authorize",
-    "pages/supermarket/address/detail"
+    "pages/supermarket/address/detail",
+    "pages/supermarket/pay/checkout"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
